--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -168,13 +168,12 @@
             })
         })
 
-        var repeatUpdate;
-        var repeatSearchAll;
-        var repeatSearchDate0, repeatSearchDate1, repeatSearchDate2, repeatSearchDate3;
-        var repeatSearchBlock0, repeatSearchBlock1, repeatSearchBlock2, repeatSearchBlock3;
-        var repeatSearchAccount0, repeatSearchAccount1, repeatSearchAccount2;
+        var repeatQuery, repeatUpdate;
         var checkPoint = 0;
-        var flag = true;
+        var flag = false;
+        var flagDate0 = false, flagDate1 = false, flagDate2 = false, flagDate3 = false;
+        var flagBlock0 = false, flagBlock1 = false, flagBlock2 = false, flagBlock3 = false;
+        var flagAccount0 = false, flagAccount1 = false, flagAccount2 = false;
 
         function updateInfo() {
             repeatUpdate = setTimeout(function() {
@@ -222,10 +221,10 @@
 
             $('#searchButton').prop('disabled', false);
 
-            clearAllRepeat();
-
+            clearTimeout(repeatQuery);
             checkPoint = 0;
-            flag = true;
+
+            clearFlag();
 
             filter_block = false;
             filter_time = false;
@@ -233,26 +232,28 @@
             filter_to = false;
         }
 
-        function clearAllRepeat() {
-            clearTimeout(repeatSearchAll);
-            clearTimeout(repeatSearchDate0);
-            clearTimeout(repeatSearchDate1);
-            clearTimeout(repeatSearchDate2);
-            clearTimeout(repeatSearchDate3);
-            clearTimeout(repeatSearchBlock0);
-            clearTimeout(repeatSearchBlock1);
-            clearTimeout(repeatSearchBlock2);
-            clearTimeout(repeatSearchBlock3);
-            clearTimeout(repeatSearchAccount0);
-            clearTimeout(repeatSearchAccount1);
-            clearTimeout(repeatSearchAccount2);
+        function clearFlag() {
+            flag = false;
+            flagDate0 = false;
+            flagDate1 = false;
+            flagDate2 = false;
+            flagDate3 = false;
+            flagBlock0 = false;
+            flagBlock1 = false;
+            flagBlock2 = false;
+            flagBlock3 = false;
+            flagAccount0 = false;
+            flagAccount1 = false;
+            flagAccount2 = false;
         }
 
         $('#searchButton').click(function() {
             $('#searchButton').prop('disabled', true);
 
-            clearAllRepeat();
+            clearTimeout(repeatQuery);
             checkPoint = 0;
+
+            clearFlag();
             flag = true;
 
             clickSearchBtn();
@@ -269,13 +270,11 @@
                     checkPoint: checkPoint
                 },
                 success: function(result) {
-                    if (!flag) {
+                    if (flag) {
                         display(result);
                         checkPoint = result.checkPoint;
-                    } else {
-                        flag = false;
+                        repeatQuery = setTimeout(function() { clickSearchBtn() }, 1500);
                     }
-                    repeatSearchAll = setTimeout(function() { clickSearchBtn() }, 1500);
                 }
             });
         }
@@ -450,9 +449,10 @@
         });
 
         function filterButton() {
-            clearAllRepeat();
+            clearTimeout(repeatQuery);
             checkPoint = 0;
-            flag = true;
+
+            clearFlag();
 
             $('.result').remove();
             $('.section_table').hide();
@@ -468,17 +468,21 @@
                             filter_from = true;
                             filter_to = true;
 
-                            setTimeout(function() { clickSearchDate(0) }, 1500);
+                            flagDate0 = true;
+                            clickSearchDate(0);
                         } else if ($('#from').val() != "") {
                             filter_from = true;
 
-                            setTimeout(function() { clickSearchDate(1) }, 1500);
+                            flagDate1 = true;
+                            clickSearchDate(1);
                         } else if ($('#to').val() != "") {
                             filter_to = true;
 
-                            setTimeout(function() { clickSearchDate(2) }, 1500);
+                            flagDate2 = true;
+                            clickSearchDate(2);
                         } else {
-                            setTimeout(function() { clickSearchDate(3) }, 1500);
+                            flagDate3 = true;
+                            clickSearchDate(3);
                         }
                     } else {
                         alert('Error! 請輸入正確之時間範圍');
@@ -491,17 +495,21 @@
                             filter_from = true;
                             filter_to = true;
 
-                            setTimeout(function() { clickSearchBlock(0) }, 1500);
+                            flagBlock0 = true;
+                            clickSearchBlock(0);
                         } else if ($('#from').val() != "") {
                             filter_from = true;
 
-                            setTimeout(function() { clickSearchBlock(1) }, 1500);
+                            flagBlock1 = true;
+                            sclickSearchBlock(1);
                         } else if ($('#to').val() != "") {
                             filter_to = true;
 
-                            setTimeout(function() { clickSearchBlock(2) }, 1500);
+                            flagBlock2 = true;
+                            clickSearchBlock(2);
                         } else {
-                            setTimeout(function() { clickSearchBlock(3) }, 1500);
+                            flagBlock3 = true;
+                            clickSearchBlock(3);
                         }
                     } else {
                         alert('Error! 請輸入正確之區塊範圍');
@@ -510,16 +518,19 @@
                     if ($('#from').val() != "") {
                         filter_from = true;
 
-                        setTimeout(function() { clickSearchAccount(0) }, 1500);
+                        flagAccount0 = true;
+                        clickSearchAccount(0);
                     } else if ($('#to').val() != "") {
                         filter_to = true;
 
-                        setTimeout(function() { clickSearchAccount(1) }, 1500);
+                        flagAccount1 = true;
+                        clickSearchAccount(1);
                     } else {
                         filter_from = true;
                         filter_to = true;
 
-                        setTimeout(function() { clickSearchAccount(2) }, 1500);
+                        flagAccount2 = true;
+                        clickSearchAccount(2);
                     }
                 }
             }
@@ -542,13 +553,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagDate0) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchDate(0) }, 1500);
                         }
-                        repeatSearchDate0 = setTimeout(function() { clickSearchDate(0) }, 1500);
                     }
                 });
             } else if (searchType == 1) {
@@ -566,13 +575,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagDate1) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchDate(1) }, 1500);
                         }
-                        repeatSearchDate1 = setTimeout(function() { clickSearchDate(1) }, 1500);
                     }
                 });
             } else if (searchType == 2) {
@@ -590,13 +597,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagDate2) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchDate(2) }, 1500);
                         }
-                        repeatSearchDate2 = setTimeout(function() { clickSearchDate(2) }, 1500);
                     }
                 });
             } else {
@@ -613,13 +618,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagDate3) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchDate(3) }, 1500);
                         }
-                        repeatSearchDate3 = setTimeout(function() { clickSearchDate(3) }, 1500);
                     }
                 });
             }
@@ -642,13 +645,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagBlock0) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchBlock(0) }, 1500);
                         }
-                        repeatSearchBlock0 = setTimeout(function() { clickSearchBlock(0) }, 1500);
                     }
                 });
             } else if (searchType == 1) {
@@ -666,13 +667,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagBlock1) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchBlock(1) }, 1500);
                         }
-                        repeatSearchBlock1 = setTimeout(function() { clickSearchBlock(1) }, 1500);
                     }
                 });
             } else if (searchType == 2) {
@@ -690,13 +689,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagBlock2) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchBlock(2) }, 1500);
                         }
-                        repeatSearchBlock2 = setTimeout(function() { clickSearchBlock(2) }, 1500);
                     }
                 });
             } else {
@@ -713,13 +710,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagBlock3) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchBlock(3) }, 1500);
                         }
-                        repeatSearchBlock3 = setTimeout(function() { clickSearchBlock(3) }, 1500);
                     }
                 });
             }
@@ -739,13 +734,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagAccount0) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchAccount(0) }, 1500);
                         }
-                        repeatSearchAccount0 = setTimeout(function() { clickSearchAccount(0) }, 1500);
                     }
                 });
             } else if (searchType == 1) {
@@ -761,13 +754,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagAccount1) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchAccount(1) }, 1500);
                         }
-                        repeatSearchAccount1 = setTimeout(function() { clickSearchAccount(1) }, 1500);
                     }
                 });
             } else {
@@ -784,13 +775,11 @@
                         checkPoint: checkPoint
                     },
                     success: function(result) {
-                        if (!flag) {
+                        if (flagAccount2) {
                             display(result);
                             checkPoint = result.checkPoint;
-                        } else {
-                            flag = false;
+                            repeatQuery = setTimeout(function() { clickSearchAccount(2) }, 1500);
                         }
-                        repeatSearchAccount2 = setTimeout(function() { clickSearchAccount(2) }, 1500);
                     }
                 });
             }
