--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -458,7 +458,7 @@
                             clickSearchBlock(0);
                         } else if ($('#from').val() != "") {
                             flagBlock1 = true;
-                            sclickSearchBlock(1);
+                            clickSearchBlock(1);
                         } else if ($('#to').val() != "") {
                             flagBlock2 = true;
                             clickSearchBlock(2);
