--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -430,7 +430,7 @@
             $('.result').remove();
             $('.section_table').hide();
 
-            if ($('#toBlok').val() == 0 && $('#toDate').val() != "") {
+            if ($('#fromDate').val() != "" && $('#toDate').val() != "" && $('#fromBlok').val() != 0  && $('#toBlok').val() != 0) {
                 alert('You can only do one range query of block/date. Please check the query input again!');
             } else {
                 if ($('#fromDate').val() != "" && $('#toDate').val() != "") {
