--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -430,7 +430,7 @@
         });
 
         function filterButton() {
-            if ($('#fromDate').val() != "" && $('#toDate').val() != "" && $('#fromBlok').val() != 0 && $('#toBlok').val() != 0) {
+            if (($('#fromDate').val() != "" || $('#toDate').val() != "") && ($('#fromBlok').val() != 0 || $('#toBlok').val() != 0)) {
                 alert('You can only do one range query of block/date. Please check the query input again!');
             } else {
                 clearTimeout(repeatQuery);
@@ -440,7 +440,7 @@
 
                 $('.result').remove();
                 $('.section_table').hide();
-                
+
                 if ($('#fromDate').val() != "" && $('#toDate').val() != "") {
                     if ((new Date($('#fromDate').val()).getTime()) <= (new Date($('#toDate').val()).getTime())) {
                         if ($('#from').val() != "" && $('#to').val() != "") {
