--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -297,13 +297,15 @@
             buttons: [{
                 text: 'filter',
                 click: function() {
+                    $('#fromDate').val('Jul 30 2015');
+                    $('#toDate').val('');
                     filterButton();
                     $(this).dialog("close");
                 }
             }, {
                 text: 'clear',
                 click: function() {
-                    $('#fromBlock').val('');
+                    $('#fromBlock').val('0');
                     $('#toBlock').val('');
                 }
             }],
@@ -337,6 +339,8 @@
             buttons: [{
                 text: 'filter',
                 click: function() {
+                    $('#fromBlock').val('0');
+                    $('#toBlock').val('');
                     filterButton();
                     $(this).dialog("close");
                 }
@@ -430,7 +434,7 @@
         });
 
         function filterButton() {
-            if (($('#fromDate').val() != "" || $('#toDate').val() != "") && ($('#fromBlok').val() != 0 || $('#toBlok').val() != 0)) {
+            if ($('#toDate').val() != "" && $('#toBlok').val() != 0) {
                 alert('You can only do one range query of block/date. Please check the query input again!');
             } else {
                 clearTimeout(repeatQuery);
