--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -434,7 +434,7 @@
         });
 
         function filterButton() {
-            if ($('#toDate').val() != "" && $('#toBlok').val() != 0) {
+            if ($('#toDate').val() != "" && $('#toBlok').val() != "") {
                 alert('You can only do one range query of block/date. Please check the query input again!');
             } else {
                 clearTimeout(repeatQuery);
