--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -433,20 +433,23 @@
             }
         });
 
+        function resetQueryAction() {
+            clearTimeout(repeatQuery);
+            checkPoint = 0;
+
+            clearFlag();
+
+            $('.result').remove();
+            $('.section_table').hide();
+        }
+
         function filterButton() {
             if ($('#toDate').val() != "" && $('#toBlok').val() != "") {
                 alert('You can only do one range query of block / date. Please check the query input again!');
             } else {
-                clearTimeout(repeatQuery);
-                checkPoint = 0;
-
-                clearFlag();
-
-                $('.result').remove();
-                $('.section_table').hide();
-
                 if ($('#toDate').val() != "" && $('#toDate').val() != "") {
                     if ((new Date($('#fromDate').val()).getTime()) <= (new Date($('#toDate').val()).getTime())) {
+                        resetQueryAction();
                         if ($('#from').val() != "" && $('#to').val() != "") {
                             flagDate0 = true;
                             clickSearchDate(0);
@@ -464,6 +467,7 @@
                         alert('Error! 請輸入正確之時間範圍');
                     }
                 } else if ($('#fromBlock').val() != "" && $('#toBlock').val() != 0) {
+                    resetQueryAction();
                     if ($('#fromBlock').val() <= $('#toBlock').val()) {
                         if ($('#from').val() != "" && $('#to').val() != "") {
                             flagBlock0 = true;
@@ -482,6 +486,7 @@
                         alert('Error! 請輸入正確之區塊範圍');
                     }
                 } else if ($('#from').val() != "" || $('#to').val() != "") {
+                    resetQueryAction();
                     if ($('#from').val() != "" && $('#to').val() != "") {
                         flagAccount0 = true;
                         clickSearchAccount(0);
