--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -443,7 +443,7 @@
             if ($('#toDate').val() != "" && $('#toBlok').val() != "") {
                 alert('You can only do one range query of block / date. Please check the query input again!');
             } else {
-                if ($('#toDate').val() != "" && $('#toDate').val() != "") {
+                if ($('#fromDate').val() != "" && $('#toDate').val() != "") {
                     if ((new Date($('#fromDate').val()).getTime()) <= (new Date($('#toDate').val()).getTime())) {
                         $('#fromBlock').val('0');
                         $('#toBlock').val('');
@@ -471,7 +471,7 @@
                     $('#toDate').val('');
 
                     resetQueryAction();
-                    
+
                     if ($('#fromBlock').val() <= $('#toBlock').val()) {
                         if ($('#from').val() != "" && $('#to').val() != "") {
                             flagBlock0 = true;
