--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -454,7 +454,7 @@
         }
 
         function filterButton() {
-            if ($('#toDate').val() != "" && $('#toBlok').val() != "") {
+            if ($('#toDate').val() != "" && $('#toBlok').val() != null) {
                 alert('You can only do one range query of block / date. Please check the query input again!');
             } else {
                 if ($('#fromDate').val() != "" && $('#toDate').val() != "") {
