Done for search all token

--- a/Tracer/public/index.html
+++ b/Tracer/public/index.html
@@ -36,6 +36,9 @@
                 <div class="primary-blue-button">
                     <a href="query.html">VIEW TRANSFER History !</a>
                 </div>
+                <div class="primary-orange-button">
+                    <a href="multiQuery.html">VIEW All RegToken !</a>
+                </div>
             </div>
         </div>
     </div>
