--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -251,6 +251,7 @@
             flagAccount0 = false;
             flagAccount1 = false;
             flagAccount2 = false;
+            flagToken = false;
         }
 
         $('#searchButton').click(function() {
